# nacsos-data

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  nacsos-data.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
docs/: DATA.md
docs/notes/: database.md  devops.md
migrations/: env.py
migrations/versions/: 0a7150badec2_rename_twitter_context_annotations.py  2c270c20fa65_merge_academic_branches.py  2e7f4f4ccc1e_change_bigints_to_strings_for_twitter_.py  39a909f49a4b_item_inheritance.py  5a3d878c2762_add_multiint.py  6b1c390079fc_add_order_to_assignments.py  7410761c53c7_rename_annotation_task_to_scheme.py  99c9410f5dda_cascade_annotations_assignments.py  9cc6877cf04a_make_twitter_ids_unique_again.py  a8a67609c622_add_multi_int.py  ac0d7784de10_add_timestamps.py  ad94859b7c75_add_twitter_items.py  b185f9df0492_add_user_info_to_tweet.py  b79b1378b6f5_add_parent_bot_annotation.py  b9cc04e8a879_add_project_type.py  c54713d59de5_annotation_task_uniqueness_constraint.py  cce19f8cf077_add_unique_parent.py  ce20ca479173_add_type_to_m2m_itemimport.py  d9664e1507bf_fix_import_cascade.py  deeb94c47382_cascade_item_subclasses.py  f72c47e6708d_add_time_created_to_assignment_scope.py  f7ad0c0db0d9_extend_academic_item.py  fb4fd884cb46_add_status_to_assignment.py
scripts/: dummy_annotations.py  dummy_annotations_clear.py  dummy_project.py
src/nacsos-data/db/: engine.py
src/nacsos-data/models/: annotations.py  projects.py  users.py
src/nacsos-data/models/items/: __init__.py
src/nacsos_data/: __init__.py
src/nacsos_data/db/: __init__.py  connection.py  engine.py
src/nacsos_data/db/crud/: __init__.py  annotations.py  imports.py  pipeline.py  priority.py  projects.py  users.py
src/nacsos_data/db/crud/items/: __init__.py  academic.py  basic.py  generic.py  lexis_nexis.py  twitter.py
src/nacsos_data/db/models/: __init__.py  projects.py
src/nacsos_data/db/models/items/: __init__.py
src/nacsos_data/db/schemas/: __init__.py  annotation_quality.py  annotation_tracker.py  annotations.py  bot_annotations.py  enhancements.py  highlight.py  hightlight.py  imports.py  pipeline.py  priority.py  projects.py  users.py
src/nacsos_data/db/schemas/items/: __init__.py  academic.py  base.py  generic.py  lexis_nexis.py  twitter.py
src/nacsos_data/models/: __init__.py  annotation_quality.py  annotation_tracker.py  annotations.py  bot_annotations.py  enhancements.py  highlight.py  hightlight.py  imports.py  nql.py  openalex.py  pipeline.py  pipelines.py  priority.py  projects.py  users.py  web_of_science.py
src/nacsos_data/models/imports/: __init__.py  import_config_jsonl.py  import_config_ris.py  import_config_scopus.py  import_config_twitter.py  import_config_wos.py
src/nacsos_data/models/items/: __init__.py  academic.py  base.py  generic.py  lexis_nexis.py  twitter.py
src/nacsos_data/models/openalex/: solr.py
src/nacsos_data/models/pipeline/: __init__.py  artefact.py  enums.py  task.py
src/nacsos_data/models/pipeline/lib/: __init__.py  abc.py  jsonl.py  openalex.py  scopus.py  twitter.py  wos.py
src/nacsos_data/schemas/: annotations.py  projects.py  users.py
src/nacsos_data/schemas/items/: __init__.py
src/nacsos_data/scripts/: academic_apis.py  importer.py  nacsos.py
src/nacsos_data/scripts/dummy_data/: dummy_annotations.py  dummy_project.py  migrate_resolutions.py
src/nacsos_data/scripts/migrations/: __init__.py  env.py
src/nacsos_data/scripts/migrations/versions/: 00859c3f922e_resolve_inplace.py  07e7e605fc9f_assiscope_ts_not_null.py  088f7577e74c_add_enhancements.py  0add248a173e_tracker_labels_to_jsonb.py  0edb14e3883a_add_parent_repeat_to_annotation.py  1068ffa0b6e1_tweet_project_id.py  10890590650e_add_rev_to_aiv.py  1148d434d975_add_config_to_assignment_scope.py  12ece8918eb8_prio_app.py  19535816c49b_drop_constraints.py  19e59a3a3aad_uid_to_uname.py  1f57c6f42055_lexisnexis.py  222054e4b214_empty_pw.py  235b87457c39_unique_academic_items.py  2776318df1b7_add_auth_tokens.py  27a1ef8e5c89_cascade_more.py  29ee854289d4_incl_rule.py  31af32aff187_drop_highlgts.py  33c268ec1590_bamid.py  33fe72326e3a_simplify_task.py  395f96022ce9_annotation_tracker.py  3b7903c1882c_add_item2project_table.py  40e485a48a92_multiple_highlighters.py  4d4d3db5e1a5_add_permissions.py  53d573bcffcb_add_batchsize.py  67c3e5f99233_prio.py  6e1c9891aeef_add_highlighter.py  71ed1752cdae_add_annotation_label_type.py  731be1ea0af7_set_item_text_nullable_and_import_.py  734c0532d595_change_bitannotationkind.py  759bd9e10fae_more_cascades.py  77b486e09680_initial.py  7944d3d6b325_fix_foreign_key_in_annotation_table.py  8a29c3738b2e_item_edit_flag.py  8ce7bb134e00_missing_cols.py  91adb685592d_simplify_task.py  91d5479e3a40_free_import_type.py  94fca3680b63_add_pipelines.py  97ba1f870753_drop_title_slug_constraint.py  99a0647bb486_add_annotations_to_tweet_item.py  (+32 more)
src/nacsos_data/util/: __init__.py  auth.py  buscar.py  conf.py  duplicate.py  errors.py  import_generic.py  nql.py  text.py  xml.py
src/nacsos_data/util/academic/: bibtex.py  clean.py  duplicate.py  import.py  importer.py  importing.py  nacsos_legacy.py  openalex.py  scopus.py  util.py  wos.py
src/nacsos_data/util/academic/apis/: README.md  __init__.py  crossref.py  dimensions.py  openalex.py  pubmed.py  scopus.py  springer.py  util.py  wos.py
src/nacsos_data/util/academic/readers/: bibtex.py  nacsos_legacy.py  openalex.py  scopus.py  wos.py
src/nacsos_data/util/academic/wosfile/: LICENSE  README.md  read.py  record.py  tags.py
src/nacsos_data/util/annotations/: __init__.py  assignment.py  assignments.py  export.py  label_transform.py  validation.py
src/nacsos_data/util/annotations/assignments/: __init__.py  naive_ml.py  random.py  random_exclusion.py  (+1 more)
src/nacsos_data/util/duplicate/: __init__.py  index.py  index_milvus.py  index_pynn.py  plain.py  ref_update.py
src/nacsos_data/util/lexisnexis/: importer.py  parse.py  webapi.py
src/nacsos_data/util/pipelines/: imports.py
src/nacsos_data/util/priority/: mask.py  ml.py  naive_ml.py  plots.py  run.py  run_all.py
(+20 files in other folders)
