[project]
name = "nacsos_data"
version = "0.23.0"
description = "Core data models and utilities for the NACSOS platform"
author = "Tim Repke / ECS@PIK"
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = [
    "email-validator==2.3.0",
    "lark==1.3.1",
    "psycopg[binary]==3.2.13",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "setuptools==80.9.0",
    "SQLAlchemy==2.0.44",
    "sqlalchemy-json==0.7.0",
]

[project.optional-dependencies]
utils = [
    "httpx[http2,socks]==0.28.1",
    "bcrypt==5.0.0",
    "rispy==0.10.0",
    "scipy==1.16.3",
    "numpy==2.3.5",
    "scikit-learn==1.7.2",
    "markdownify==1.2.2",
    "lxml==6.0.2",
    "bibtexparser==1.4.3",
    "pymilvus==2.6.3"
]
priority = [
    "matplotlib==3.10.7",
    "pandas==2.3.3",
    "transformers[torch]==4.57.2",
    "datasets==4.4.1",
    "evaluate==0.4.6",
]
testing = [
    "flake8==7.3.0",
    "tox==4.32.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "mypy[faster-cache]==1.18.2",
    "types-passlib==1.7.7.20250602",
    "types-requests==2.32.4.20250913",
]
scripts = [
    "typer==0.20.0",
    "alembic==1.17.2",
]

[project.scripts]
nacsos_migrate = "nacsos_data.scripts.migrations:run"
academic_api = "nacsos_data.scripts.academic_apis:run"

[tool.uv]
package = true

[build-system]
requires = ["uv-build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov=nacsos_data"
testpaths = [
    "tests",
]

[tool.flake8]
max-line-length = 160

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
follow_imports = "silent"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
strict_optional = true
explicit_package_bases = false
show_traceback = true
incremental = false

files = ['src/nacsos_data']
exclude = [
    'scripts\/.*'
]

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
include = ["src/nacsos_data"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/nacsos_data/scripts",
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.13"
pythonPlatform = "Linux"

#[tool.setuptools]
#package-dir = {"" = "src"}
#include-package-data = true
#zip-safe = false
#
#[tool.setuptools.packages.find]
#where = ["src"]
#namespaces = false
#
#[tool.setuptools.package-data]
#nacsos_data = [
#    "py.typed",
#    "scripts/*",
#    "scripts/**/*",
#]
