[metadata]
name = nacsos_data
version = 0.21.0
description = Core data models and utilities for the NACSOS platform
author = APSIS@MCC
license = agpl-3.0
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    =src

include_package_data = True
python_requires = >=3.12
zip_safe = no

install_requires =
    email-validator==2.2.0
    lark==1.2.2
    psycopg[binary]==3.2.6
    psycopg2-binary==2.9.10
    pydantic==2.11.0b2
    pydantic-settings==2.8.1
    python-dotenv==1.1.0
    setuptools==78.1.0
    SQLAlchemy==2.0.39
    sqlalchemy-json==0.7.0

[options.packages.find]
where = src

[options.package_data]
nacsos_data =
    py.typed
    scripts/*
    scripts/**/*

[options.extras_require]
utils =
    httpx[http2]==0.28.1
    passlib==1.7.4
    rispy==0.9.0
    scipy==1.15.2
    numpy==2.2.4
    scikit-learn==1.6.1
    markdownify==1.1.0
    lxml==5.3.1
    bibtexparser==2.0.0b8
    pymilvus==2.5.6

priority =
    matplotlib==3.10.1
    pandas==2.2.3
    transformers[torch]==4.50.2
    datasets==3.4.1
    evaluate==0.4.3

testing =
    flake8==7.1.2
    tox==4.24.2
    pytest==8.3.5
    pytest-cov==6.0.0
    mypy==1.15.0
    types-passlib==1.7.7.20250326
    types-requests==2.32.0.20250306

scripts =
    typer==0.12.5
    alembic==1.13.3

[options.entry_points]
console_scripts =
    nacsos_migrate = nacsos_data.scripts.migrations:run

[flake8]
max-line-length = 160
