[metadata]
name = nacsos_data
version = 0.22.1
description = Core data models and utilities for the NACSOS platform
author = APSIS@MCC
license = agpl-3.0
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    =src

include_package_data = True
python_requires = >=3.12
zip_safe = no

install_requires =
    email-validator==2.2.0
    lark==1.2.2
    psycopg[binary]==3.2.9
    psycopg2-binary==2.9.10
    pydantic==2.11.7
    pydantic-settings==2.10.0
    python-dotenv==1.1.1
    setuptools==80.9.0
    SQLAlchemy==2.0.41
    sqlalchemy-json==0.7.0

[options.packages.find]
where = src

[options.package_data]
nacsos_data =
    py.typed
    scripts/*
    scripts/**/*

[options.extras_require]
utils =
    httpx[http2,socks]==0.28.1
    passlib==1.7.4
    rispy==0.10.0
    scipy==1.16.0
    numpy==2.3.1
    scikit-learn==1.7.0
    markdownify==1.1.0
    lxml==5.3.1
    bibtexparser==2.0.0b8
    pymilvus==2.5.6

priority =
    matplotlib==3.10.1
    pandas==2.3.0
    transformers[torch]==4.52.4
    datasets==3.6.0
    evaluate==0.4.4

testing =
    flake8==7.3.0
    tox==4.24.2
    pytest==8.3.5
    pytest-cov==6.0.0
    mypy==1.16.1
    types-passlib==1.7.7.20250602
    types-requests==2.32.4.20250611

scripts =
    typer==0.16.0
    alembic==1.16.2

[options.entry_points]
console_scripts =
    nacsos_migrate = nacsos_data.scripts.migrations:run
    academic_api =  nacsos_data.scripts.academic_apis:run

[flake8]
max-line-length = 160
