[metadata]
name = nacsos_data
version = 0.22.6
description = Core data models and utilities for the NACSOS platform
author = APSIS@MCC
license = agpl-3.0
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    =src

include_package_data = True
python_requires = >=3.12
zip_safe = no

install_requires =
    email-validator==2.3.0
    lark==1.3.0
    psycopg[binary]==3.2.10
    psycopg2-binary==2.9.11
    pydantic==2.12.3
    pydantic-settings==2.11.0
    python-dotenv==1.1.1
    setuptools==80.9.0
    SQLAlchemy==2.0.44
    sqlalchemy-json==0.7.0

[options.packages.find]
where = src

[options.package_data]
nacsos_data =
    py.typed
    scripts/*
    scripts/**/*

[options.extras_require]
utils =
    httpx[http2,socks]==0.28.1
    bcrypt==5.0.0
    rispy==0.10.0
    scipy==1.16.2
    numpy==2.3.4
    scikit-learn==1.7.2
    markdownify==1.2.0
    lxml==6.0.2
    bibtexparser==1.4.3
    pymilvus==2.6.2

priority =
    matplotlib==3.10.7
    pandas==2.3.3
    transformers[torch]==4.57.1
    datasets==4.2.0
    evaluate==0.4.6

testing =
    flake8==7.3.0
    tox==4.31.0
    pytest==8.4.2
    pytest-cov==7.0.0
    mypy==1.18.2
    types-passlib==1.7.7.20250602
    types-requests==2.32.4.20250913

scripts =
    typer==0.19.2
    alembic==1.17.0

[options.entry_points]
console_scripts =
    nacsos_migrate = nacsos_data.scripts.migrations:run
    academic_api =  nacsos_data.scripts.academic_apis:run

[flake8]
max-line-length = 160
